# phice

./: .gitignore  README.md  app.py  config.example.json  dprint.json  pyproject.toml
src/: __init__.py  jinja_filters.py  jinja_globals.py
src/lib/: api.py  exceptions.py  extractor.py  parsers.py  utils.py
src/routes/: albums.py  cdn.py  error.py  groups.py  home.py  posts.py  profile.py  search.py  settings.py  share.py
src/static/: album.css  error.css  home.css  search.css  settings.css  style.css  timeline.css
src/static/assets/: LICENSE.txt
src/static/themes/: LICENSE.txt  black.css  catppuccin_latte.css  catppuccin_mocha.css  light.css
src/templates/: album.html.jinja  base.html.jinja  context_macros.html.jinja  error.html.jinja  home.html.jinja  macros.html.jinja  post.html.jinja  search.html.jinja  settings.html.jinja  timeline.html.jinja  timeline.rss.jinja
