[project]
name = "Phice"
version = "0.0.1"
description = "A lightweight privacy-friendly alternative front-end for Facebook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "werkzeug>=3.1.3",
    "httpx[zstd]>=0.28.1",
    "orjson>=3.10.18",
]

[tool.ruff]
indent-width = 4
line-length = 132

[tool.ruff.lint]
select = [
    "ANN",
    "S",
    "FBT",
    "B",
    "A",
    "C4",
    "PIE",
    "PYI",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TC",
    "ARG",
    "FLY",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "PLC",
    "PLE",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]
ignore = ["N818", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"src/lib/api.py" = ["N802"]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
